@@ -1636,7 +1636,7 @@ WARPNPC	45
 4W_F_01	101
 8_F	102
 8_F_GRANDMOTHER	103
-//104	is	shadow	sprite
+//EFFECTLAUNCHER	104// This is the shadow sprite
 8W_SOLDIER	105
 1_M_MOC_LORD	106
 1_M_PAY_ELDER	107
@@ -1689,6 +1689,84 @@ HIDDEN_WARP_NPC	139
 4_BEAR	426
 4_BLUEWOLF	427
 4_PECO-PECO	428
+4_M_JP_MID	429
+4_M_JP_RUN	430
+4_ORCLADY	431
+4_ORCLADY2	432
+4_ORCWARRIOR	433
+4_ORCWARRIOR2	434
+4_F_FAIRY	435
+4_F_FAIRYKID	436
+4_F_FAIRYKID2	437
+4_F_FAIRYKID3	438
+4_F_FAIRYKID4	439
+4_F_FAIRYKID5	440
+4_F_FAIRYKID6	441
+4_M_FAIRYKID	442
+4_M_FAIRYKID2	443
+4_M_FAIRYKID3	444
+4_M_FAIRYKID4	445
+4_M_FAIRYKID5	446
+4_M_FAIRYSOLDIER	447
+4_M_TUFFOLD	448
+4_MAN_BENKUNI	449
+4_MAN_GALTUN	450
+4_MAN_JERUTOO	451
+4_MAN_LAVAIL	452
+4_MAN_NITT	453
+4_MAN_PIOM	454
+4_MAN_PIOM2	455
+4_M_DSTMAN	456
+4_M_DSTMANDEAD	457
+4_BABYLEOPARD	458
+4_M_REDSWORD	459
+4_MAN_PIOM3	460
+4_M_FAIRYSOLDIER2	461
+4_F_FAIRYSOLDIER	462
+4_DRAGON_EGG	463
+4_MIMIC	464
+4_F_FAIRY1	465
+4_F_GUILLOTINE	466
+4_M_GUILLOTINE	467
+4_M_KNIGHT_BLACK	468
+4_M_KNIGHT_GOLD	469
+4_M_KNIGHT_SILVER	470
+4_SKULL_MUD	471
+4_M_BRZ_INDIAN	472
+4_F_BRZ_INDIAN	473
+4_F_BRZ_INDOLD	474
+4_M_BRZ_JACI	475
+4_M_BRZ_MAN1	476
+4_M_BRZ_MAN2	477
+4_F_BRZ_WOMAN	478
+4_M_MINSTREL	479
+4_M_MINSTREL1	480
+4_M_SHADOWCHASER	481
+4_F_SHADOWCHASER	482
+4_M_SURA	483
+4_F_SURA	484
+4_F_WANDERER	485
+4_M_BARD	486
+1_FLAG_NOFEAR	487
+4_M_NOFEARGUY	488
+4_MAN_PIOM6	489
+4_MAN_PIOM4	490
+4_MAN_PIOM5	491
+4_MAN_GALTUN1	492
+4_HUMAN_GERUTOO	493
+4_M_ROKI	494
+4_M_MERCAT1	495
+4_M_MERCAT2	496
+4_M_CATMAN1	497
+4_M_CATMAN2	498
+4_F_BRZ_WOMAN2	499
+4_M_JP_DISH	500
+4_F_JP_NOAH	501
+4_F_JP_OZ	502
+4_F_JP_CHROME	503
+4_F_JP_RINNE	504
+4_WHITETIGER	505
+4_VENDING_MACHINE	506
 //Free	Ids
 8_F_GIRL	700
 4_F_GODEMOM	701
